--- a/calculator.html
+++ b/calculator.html
@@ -15,7 +15,7 @@
         <!--this input displays the result of the calculation-->
         <input type="text" class="calculator-screen" value="0" disabled>
         <!--this section displays all the buttons that a user can press to make a calculation-->
-        <div class="calculator_keys">
+        <div class="calculator-keys">
 
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operator" value="-">-</button>
